# rlaopt

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  distributed_krr_linsys_solve_test.py  distributed_lin_ops_test.py  distributed_linops_test.py  distributed_linsys_solve_test.py  distributed_matvec_v2.py  distributed_matvec_v3.py  distributed_matvec_v4.py  distributed_matvec_v5.py  linsys_solve_test.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.py  sketch_tests.ipynb  sonar-project.properties  test_distributed_lin_ops.py
.github/workflows/: build.yml  continuous_integration.yml
distributed_testing/: distributed_matvec_v1.ipynb
docs/: conf.py  index.rst  refs.bib
docs/api/: sketchyopts.base.rst  sketchyopts.error.rst  sketchyopts.errors.rst  sketchyopts.linear_solve.rst  sketchyopts.low_rank_approx.rst  sketchyopts.nystrom.rst  sketchyopts.operator.rst  sketchyopts.preconditioner.rst  sketchyopts.prox.rst  sketchyopts.sketching.rst  sketchyopts.solver.base_solver.rst  sketchyopts.solver.nysadmm.rst  sketchyopts.solver.nystrom_pcg.rst  sketchyopts.solver.promise.rst  sketchyopts.solver.rst  sketchyopts.solver.sgmres.rst  sketchyopts.util.rst
docs/tutorials/: index.rst  l2_logistic_regression.ipynb  ridge_regression.ipynb  support_vector_machine.ipynb
experiments/: distributed_krr_linsys_askotch_solve_test.py  distributed_krr_linsys_solve_test.py  distributed_linops_test.py  distributed_linsys_solve_test.py  distributed_matvec_v1.py  distributed_matvec_v2.py  distributed_matvec_v3.py  linsys_solve_test.ipynb  sparse_tensor_test.ipynb  sparse_tensor_test.py  test_hutchpp.py
notebooks/: cupy.ipynb
rlaopt/: __init__.py
rlaopt/csrc/: csc_matmat.cpp  csc_matvec.cpp  row_slice.cpp
rlaopt/kernels/: __init__.py  base.py  configs.py  factory.py  rbf.py  standard.py  utils.py
rlaopt/linops/: __init__.py  base.py  base_linop.py  distributed.py  distributed_linops.py  (+6 more)
sketchyopts/: __init__.py  base.py  errors.py  linear_solve.py  linop.py  low_rank_approx.py  lra.py  nsketch.py  nysadmm.py  operator.py  pcg.py  preconditioner.py  prox.py  sketches.py  sketching.py  sketchy_katyusha.py  sketchy_pcg.py  sketchy_saga.py  sketchy_sgd.py  sketchy_svrg.py  solver.py  tree_util.py  util.py
tests/: base_test.py  low_rank_approx_test.py  nysadmm_test.py  nystrom_pcg_test.py  nystrom_test.py  operator_test.py  preconditioner_test.py  promise_test.py  prox_test.py  sketching_test.py  solver_test.py  sparse_tensor.py  test_util.py  tree_util_test.py  util_test.py
(+91 files in other folders)
