[build-system]
requires = ["setuptools", "wheel", "torch>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlaopt"
version = "0.1.0"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
