[build-system]
requires = ["setuptools", "wheel", "torch>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlaopt"
version = "0.1.0"
description = "Randomized linear algebra-based methods for optimization in PyTorch."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License, Version 2.0"}
authors = [
    {name = "Pratik Rathore", email = "pratikr@stanford.edu"},
    {name = "Zachary Frangella", email = "zfran@stanford.edu"},
    {name = "Weimu Lei", email = "leiweimu@gmail.com"}
]
dependencies = [
    "numpy>=2.2.0",
    "scipy>=1.15.0", 
    "torch>=2.6.0", 
    "wandb>=0.19.0", 
    "pykeops>=2.2.0"
]

[project.urls]
"Source" = "https://github.com/udellgroup/rlaopt"
"Issue Tracker" = "https://github.com/udellgroup/rlaopt/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"