[build-system]
requires = ["setuptools", "wheel", "torch>=2.6.0", "ninja>=1.11.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlaopt"
version = "0.1.0"
description = "Randomized linear algebra-based methods for optimization in PyTorch."
keywords = ["optimization", "linear algebra", "randomized algorithms", "PyTorch"]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Pratik Rathore", email = "pratikr@stanford.edu"},
    {name = "Zachary Frangella", email = "zfran@stanford.edu"},
    {name = "Weimu Lei", email = "leiweimu@gmail.com"}
]
dependencies = [
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "torch>=2.6.0",
    "wandb>=0.19.0",
    "pykeops>=2.2.0"
]

[project.urls]
Homepage = "https://github.com/udellgroup/rlaopt"
Issues = "https://github.com/udellgroup/rlaopt/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ninja>=1.11.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
